@@ -12,7 +12,7 @@ DO NOT MODIFY - GENERATED CODE
   <parent>
     <groupId>org.jruby</groupId>
     <artifactId>jruby-parent</artifactId>
-    <version>9.4.2.0-SNAPSHOT</version>
+    <version>9.4.8.0-SNAPSHOT</version>
   </parent>
   <artifactId>jruby-base</artifactId>
   <name>JRuby Base</name>
@@ -55,9 +55,9 @@ DO NOT MODIFY - GENERATED CODE
     <test.results.dir>${build.dir}/test-results</test.results.dir>
     <tzdata.scope>provided</tzdata.scope>
     <tzdata.version>2019c</tzdata.version>
-    <version.ruby>3.1.0</version.ruby>
+    <version.ruby>3.1.4</version.ruby>
     <version.ruby.major>3.1</version.ruby.major>
-    <version.ruby.minor>0</version.ruby.minor>
+    <version.ruby.minor>4</version.ruby.minor>
   </properties>
   <dependencies>
     <dependency>
@@ -89,7 +89,7 @@ DO NOT MODIFY - GENERATED CODE
     <dependency>
       <groupId>com.github.jnr</groupId>
       <artifactId>jnr-enxio</artifactId>
-      <version>0.32.14</version>
+      <version>0.32.17</version>
       <exclusions>
         <exclusion>
           <groupId>com.github.jnr</groupId>
@@ -100,7 +100,7 @@ DO NOT MODIFY - GENERATED CODE
     <dependency>
       <groupId>com.github.jnr</groupId>
       <artifactId>jnr-unixsocket</artifactId>
-      <version>0.38.19</version>
+      <version>0.38.22</version>
       <exclusions>
         <exclusion>
           <groupId>com.github.jnr</groupId>
@@ -111,7 +111,7 @@ DO NOT MODIFY - GENERATED CODE
     <dependency>
       <groupId>com.github.jnr</groupId>
       <artifactId>jnr-posix</artifactId>
-      <version>3.1.16</version>
+      <version>3.1.19</version>
       <exclusions>
         <exclusion>
           <groupId>com.github.jnr</groupId>
@@ -133,7 +133,7 @@ DO NOT MODIFY - GENERATED CODE
     <dependency>
       <groupId>com.github.jnr</groupId>
       <artifactId>jnr-ffi</artifactId>
-      <version>2.2.13</version>
+      <version>2.2.16</version>
     </dependency>
     <dependency>
       <groupId>com.github.jnr</groupId>
@@ -149,7 +149,7 @@ DO NOT MODIFY - GENERATED CODE
     <dependency>
       <groupId>org.jruby.joni</groupId>
       <artifactId>joni</artifactId>
-      <version>2.1.48</version>
+      <version>2.2.1</version>
     </dependency>
     <dependency>
       <groupId>org.jruby.jcodings</groupId>
@@ -164,7 +164,7 @@ DO NOT MODIFY - GENERATED CODE
     <dependency>
       <groupId>com.headius</groupId>
       <artifactId>invokebinder</artifactId>
-      <version>1.12</version>
+      <version>1.13</version>
     </dependency>
     <dependency>
       <groupId>com.headius</groupId>
@@ -172,9 +172,9 @@ DO NOT MODIFY - GENERATED CODE
       <version>1.6</version>
     </dependency>
     <dependency>
-      <groupId>com.jcraft</groupId>
+      <groupId>org.jruby</groupId>
       <artifactId>jzlib</artifactId>
-      <version>1.1.3</version>
+      <version>1.1.5</version>
     </dependency>
     <dependency>
       <groupId>junit</groupId>
@@ -197,12 +197,6 @@ DO NOT MODIFY - GENERATED CODE
       <artifactId>org.osgi.core</artifactId>
       <version>5.0.0</version>
       <scope>provided</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.jruby</groupId>
-      <artifactId>joda-timezones</artifactId>
-      <version>${tzdata.version}</version>
-      <scope>${tzdata.scope}</scope>
     </dependency>
     <dependency>
       <groupId>joda-time</groupId>
@@ -236,7 +230,7 @@ DO NOT MODIFY - GENERATED CODE
     <dependency>
       <groupId>com.headius</groupId>
       <artifactId>backport9</artifactId>
-      <version>1.12</version>
+      <version>1.13</version>
     </dependency>
     <dependency>
       <groupId>jakarta.annotation</groupId>
@@ -449,7 +443,7 @@ DO NOT MODIFY - GENERATED CODE
               <goal>compile</goal>
             </goals>
             <configuration>
-              <debug>true</debug>
+              <fork>true</fork>
               <annotationProcessors>
                 <annotationProcessor>org.jruby.anno.AnnotationBinder</annotationProcessor>
               </annotationProcessors>
@@ -469,7 +463,8 @@ DO NOT MODIFY - GENERATED CODE
               <goal>compile</goal>
             </goals>
             <configuration>
-              <debug>true</debug>
+              <debug>false</debug>
+              <fork>true</fork>
               <compilerArgs>
                 <compilerArg>-XDignore.symbol.file=true</compilerArg>
                 <compilerArg>-J-Duser.language=en</compilerArg>
@@ -497,12 +492,7 @@ DO NOT MODIFY - GENERATED CODE
         </executions>
         <configuration>
           <encoding>utf-8</encoding>
-          <debug>true</debug>
           <verbose>false</verbose>
-          <fork>true</fork>
-          <compilerArgs>
-            <arg>-J-Xmx1G</arg>
-          </compilerArgs>
           <showWarnings>true</showWarnings>
           <showDeprecation>true</showDeprecation>
           <source>${base.java.version}</source>
@@ -557,7 +547,7 @@ DO NOT MODIFY - GENERATED CODE
           </systemProperties>
           <argLine>-Xmx${jruby.test.memory} -Dfile.encoding=UTF-8 -Djava.awt.headless=true</argLine>
           <environmentVariables>
-            <JDK_JAVA_OPTIONS>--add-modules java.scripting</JDK_JAVA_OPTIONS>
+            <JDK_JAVA_OPTIONS>--add-modules java.scripting --add-opens java.base/sun.nio.ch=ALL-UNNAMED --add-opens java.base/java.io=ALL-UNNAMED</JDK_JAVA_OPTIONS>
           </environmentVariables>
           <includes>
             <include>org/jruby/test/**/*Test*.java</include>
@@ -665,6 +655,65 @@ DO NOT MODIFY - GENERATED CODE
                     <argument>-c</argument>
                     <argument>cp ${jruby.basedir}/bin/jruby.sh ${jruby.basedir}/bin/jruby</argument>
                   </arguments>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+    <profile>
+      <id>error-prone</id>
+      <activation>
+        <jdk>11</jdk>
+        <property>
+          <name>env.CI</name>
+        </property>
+      </activation>
+      <build>
+        <plugins>
+          <plugin>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <executions>
+              <execution>
+                <id>default-compile</id>
+                <phase>none</phase>
+                <goals>
+                  <goal>compile</goal>
+                </goals>
+              </execution>
+              <execution>
+                <id>default-compile_with_error_prone</id>
+                <phase>compile</phase>
+                <goals>
+                  <goal>compile</goal>
+                </goals>
+                <configuration>
+                  <fork>true</fork>
+                  <annotationProcessors>
+                    <annotationProcessor>org.jruby.anno.AnnotationBinder</annotationProcessor>
+                  </annotationProcessors>
+                  <generatedSourcesDirectory>target/generated-sources</generatedSourcesDirectory>
+                  <compilerArgs>
+                    <compilerArg>-XDignore.symbol.file=true</compilerArg>
+                    <compilerArg>-J-Duser.language=en</compilerArg>
+                    <compilerArg>-J-Dfile.encoding=UTF-8</compilerArg>
+                    <compilerArg>-J-Xmx${jruby.compile.memory}</compilerArg>
+                    <compilerArg>-XDcompilePolicy=simple</compilerArg>
+                    <compilerArg>-Xplugin:ErrorProne</compilerArg>
+                  </compilerArgs>
+                  <annotationProcessorPaths>
+                    <path>
+                      <groupId>com.google.errorprone</groupId>
+                      <artifactId>error_prone_core</artifactId>
+                      <version>2.18.0</version>
+                    </path>
+                    <path>
+                      <groupId>org.jruby</groupId>
+                      <artifactId>jruby-base</artifactId>
+                      <version>9.4.8.0-SNAPSHOT</version>
+                    </path>
+                  </annotationProcessorPaths>
                 </configuration>
               </execution>
             </executions>
